Proportional editing resets scaling along Y and Z axis on mouse wheel #63570

Closed
opened 2019-04-13 13:53:04 +02:00 by Raphael Stoeckli · 5 comments

System Information
Operating system: Windows 7, 64 bit
Graphics card: Nvidia GeForce GTX 760

Blender Version
Broken: 2.80, 009dbc2bc9, Branch: blender 2.7
Worked: (2.79b)

Short description of error
In mesh edit mode, when proportional editing is activated, the mesh snaps back to its initial state (value 1.0) if the mesh is scaled along the Z or Y axis and the size is changed whit the mouse wheel.
This only applies for:

  • Scaling
  • Z and Y axis
  • If proportional editing is activated (any falloff type)

Exact steps for others to reproduce the error

  1. Create a mesh (e.g. a cube)
  2. (optional:) Subdivide the object to see the influence of the proportional editing a little bit better
  3. Enter Edit Mode (tab)
  4. Enable Proportional Editing (Enabled, Projection or Connected)
  5. Select one or more faces on the mesh
  6. Press "S" to activate scaling
  7. Press "Z" or "Y" to restrict scaling to the Z or Y axis
  8. Drag the mouse to see some scaling (in Y or Z)
  9. Change the size of the proportional editing with the mouse wheel
  10. The scaling factor snaps immediately back to 1.0

The behavior stays in contradiction to the behavior of scaling along the X axis or any rotation and grab transformation (any axis).
See also attached screen recording.

proportionalEditing.gif

**System Information** Operating system: Windows 7, 64 bit Graphics card: Nvidia GeForce GTX 760 **Blender Version** Broken: 2.80, 009dbc2bc9fb, Branch: blender 2.7 Worked: (2.79b) **Short description of error** In mesh edit mode, when proportional editing is activated, the mesh snaps back to its initial state (value 1.0) if the mesh is scaled along the Z or Y axis and the size is changed whit the mouse wheel. This only applies for: - Scaling - Z and Y axis - If proportional editing is activated (any falloff type) **Exact steps for others to reproduce the error** 1. Create a mesh (e.g. a cube) 2. (optional:) Subdivide the object to see the influence of the proportional editing a little bit better 3. Enter Edit Mode (tab) 4. Enable Proportional Editing (Enabled, Projection or Connected) 5. Select one or more faces on the mesh 6. Press "S" to activate scaling 7. Press "Z" or "Y" to restrict scaling to the Z or Y axis 8. Drag the mouse to see some scaling (in Y or Z) 9. Change the size of the proportional editing with the mouse wheel 10. The scaling factor snaps immediately back to 1.0 The behavior stays in contradiction to the behavior of scaling along the X axis or any rotation and grab transformation (any axis). See also attached screen recording. ![proportionalEditing.gif](https://archive.blender.org/developer/F6939842/proportionalEditing.gif)

Added subscriber: @RaphaelStoeckli

Added subscriber: @RaphaelStoeckli
Germano Cavalcante was assigned by Sebastian Parborg 2019-04-14 14:25:21 +02:00
Germano Cavalcante removed their assignment 2019-04-14 21:46:56 +02:00
Campbell Barton was assigned by Germano Cavalcante 2019-04-14 21:46:56 +02:00

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Assigning to @ideasman42 because this regression probably came from d00f54e574.

Assigning to @ideasman42 because this regression probably came from d00f54e574.

This issue was referenced by 81dc76c19c

This issue was referenced by 81dc76c19cff51c9c1d13ab47cbfc9a855fc3263

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63570
No description provided.